# data-vent

./: .gitignore  Dockerfile  README.md  pyproject.toml
app/: __init__.py  config.py  grpc_server.py  main.py
app/proto/: __init__.py
app/routes/: __init__.py  health.py  search.py
app/services/: __init__.py  intelligent_retriever.py  parallel_search.py  query_decomposer.py  result_aggregator.py  vector_search.py
proto/: retrieval.proto
tests/: test_query_decomposer.py
